move solutions to  folder

--- a/calculus-1.ipynb
+++ b/calculus-1.ipynb
@@ -295,8 +295,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prove that if $x = \\lim_{n\\to\\infty}{x_n}$ and $x \\notin \\{-\\infty, \\infty\\}$ then $(x_i)_{i=1}^{\\infty} = (x_1, x_2, \\dots, x_n)$ is a Cauchy sequence\n",
-    "<br>\n",
+    "<div class=\"solution\">\n",
+    "For every $r$, we can find open set $U \\in X$ and $U \\subset B(x,r)$. Thus this problem is reduced to $x_i \\in U$ for every $i \\gt n_0$ which is true from the definition of the sequence\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Prove that if $x = \\lim_{n\\to\\infty}{x_n}$ and $x \\notin \\{-\\infty, \\infty\\}$ then $(x_i)_{i=1}^{\\infty} = (x_1, x_2, \\dots, x_n)$ is a Cauchy sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "if $x$ is the limit of sequence, then for every $r$ there are infinitely many $x_i$'s such that $x_k \\in B(x, \\frac{r}{2})$ for every k greater than some natural number. Thus, we can find $i$ and $j$ such that $d(x_i,x_j)<r$ and the sequence is a Cauchy sequence\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "For closed set $F \\subset \\mathbb{R}^n$ and convergent sequence $(x_i)_{i=1}^{\\infty} = (x_1, x_2, \\dots, x_n)$ such that there exists $n_0 \\in \\mathbb{N}$ such that $x_i \\in F$ for each $i \\gt n_0$ then: $\\lim_{n\\to\\infty}{x_n} \\in F$"
    ]
   },
@@ -305,6 +329,15 @@
    "metadata": {},
    "source": [
     "#### Prove that if $F$ is open from previous example, statement does not hold. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "The limit may belong to the boundary set, so if $F$ is open, then the statement is not necessarily true\n",
+    "</div>"
    ]
   },
   {
@@ -348,7 +381,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Function $f:(X, d_X) \\to (Y, d_Y)$ is called continuous if it is continuous in each point $x \\in X$"
+    "<div class=\"solution\">\n",
+    "$\\lim_{n \\to \\infty}f(x_n) = f(\\lim_{n \\to \\infty}x_n) = f(c)$\n",
+    "</div>"
    ]
   },
   {
