--- a/homework/calculus-1-homework.ipynb
+++ b/homework/calculus-1-homework.ipynb
@@ -13,38 +13,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Basic setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create anaconda environment\n",
-    "<br>\n",
-    "```bash\n",
-    "conda create -n ml python=3.7.4 jupyter\n",
-    "```\n",
-    "Install fastai library\n",
-    "<br>\n",
-    "```bash\n",
-    "conda install -c pytorch -c fastai fastai\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".solution {\n",
+       "    border: 2px solid #00b8d7;\n",
+       "    border-radius: 5px;\n",
+       "    padding: 5px 5px 5px 20px;\n",
+       "    position: relative;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       ".solution::before {\n",
+       "    content: \"\";\n",
+       "    position: absolute;\n",
+       "    left: 0;\n",
+       "    top: 0;\n",
+       "    transform: translate(-50%);\n",
+       "    border-radius: 100%;\n",
+       "    height: 100%;\n",
+       "    width: 26px;\n",
+       "    background: #00b8d7;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "!pip install https://github.com/ipython-contrib/jupyter_contrib_nbextensions/tarball/master\n",
-    "!pip install jupyter_nbextensions_configurator\n",
-    "!jupyter contrib nbextension install --user\n",
-    "!jupyter nbextensions_configurator enable --user"
+    "%%html\n",
+    "<style>\n",
+    ".solution {\n",
+    "    border: 2px solid #00b8d7;\n",
+    "    border-radius: 5px;\n",
+    "    padding: 5px 5px 5px 20px;\n",
+    "    position: relative;\n",
+    "    overflow: hidden;\n",
+    "}\n",
+    ".solution::before {\n",
+    "    content: \"\";\n",
+    "    position: absolute;\n",
+    "    left: 0;\n",
+    "    top: 0;\n",
+    "    transform: translate(-50%);\n",
+    "    border-radius: 100%;\n",
+    "    height: 100%;\n",
+    "    width: 26px;\n",
+    "    background: #00b8d7;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
@@ -70,8 +96,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "    <li>Let's prove by contradiction. Suppose there exists some $x_0$ that $x_0 \\in \\bigcup_{U \\in \\mathcal{U}} U$ and for which we cannut fund such $r$ that and $(x_0, r) \\subset \\bigcup_{U \\in \\mathcal{U}}$<br />\n",
+    "    Since $x_0 \\in \\bigcup_{U \\in \\mathcal{U}}$, there exists $U_i\\in \\mathcal{U}$ such that $x_0 \\in U_i$. By definition, $U_i$ is in $(X, d)$, thus there exists such $r$. Contradiction.</li>\n",
+    "    <li>If for every $x \\in U$ there is some $r$ that satisifies condition and for every $w \\in V$ there is some $q$ that satisfies statement of opennes in $(X, d)$, then for their intersection, the statement will still be true. Otherwise, the intersection would not be subset of neither $U$ nor $V$, which is impossible</li>\n",
+    "    <li>This is pobably typo, since $X$ is closed in $(X, d)$</li>\n",
+    "    <li>Definitely, there is no element in $\\emptyset$ that will violate the statement </li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Prove that:\n",
     "- For eny finity set $(U)_{i=1}^{n}$ of open sets in $(X, d)$, $\\bigcap_{i=1}^{n}U$ is open in $(X, d)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "    <li>This can be proven by same as the second subproblem in the previous problem. We just have n sets instead of 2. Nothing changes in the proof</li>\n",
+    "</ul>\n",
+    "</div>"
    ]
   },
   {
@@ -85,7 +137,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "Otherwise $U$ will be $\\emptyset$, but since there exists element x in set $U$, it cannot be $\\emptyset$\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Prove that, closed ball is closed subset in $(X, d)$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "Let's take closed ball $F$ with center $x \\in X$ and radius $r \\in \\mathbb{R}$. Let's take set $W=\\{y|d(y-x)=r\\}$. Then $F - W$ will be open, thus $X - F$ will also be open and $F$ will be closed set\n",
+    "</div>"
    ]
   },
   {
@@ -104,6 +174,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "    <li>pass</li>\n",
+    "    <li>Since $X - F_1$ and $X - F_2$ are both open, subset of this open set will also be open. Since $X - (F_1 \\cup F_2)$ is a subset of this open set, $F_1 \\cup F_2$ will be closed to</li>\n",
+    "    <li>$X - X = \\emptyset$, which is open set (we have proven this in the first questions)</li>\n",
+    "    <li>This is probably typo, since $\\emptyset$ is open</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Prove that:\n",
     "- For eny finity set $(F)_{i=1}^{n}$ of closed sets in $(X, d)$, $\\bigcup_{i=1}^{n}F$ is closed in $(X, d)$"
    ]
@@ -112,7 +196,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "    <li>This can be proven by same as the second subproblem in the previous problem. We just have n sets instead of 2. Nothing changes in the proof</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Prove that, if $F \\subset X$ is closed then $X - F$ is open in $(X, d)$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "This is directly definition of closed set (according to this notebook), so there's nothing to prove\n",
+    "</div>"
    ]
   },
   {
@@ -137,7 +241,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "    <li>$d(u, v) = ||u-v||_2 = \\sqrt{\\sum_{i = 1}^{n}(u_i - v_i)^2}$ for every $i \\leq n, (u_i - v_i)^2$ is non-negative, so square root of sum of non-negative real numbers is also non-negative</li>\n",
+    "    <li>Since for every $i \\leq n, (u_i - u_i)^2=0$, $d(u,u)=0$</li>\n",
+    "    <li>Since square of difference is symmetric ($(u_i - v_i)^2 = (v_i - u_i)^2$), this will also be symmetric</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Prove the same properties hold for $d(u, v) = ||u-v||_1$ ($||u-v||_1 = \\sum_{i = 1}^{n}|u_i - v_i|$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "    <li>$d(u, v) = ||u-v||_1 = \\sum_{i = 1}^{n}|u_i - v_i|$ for every $i \\leq n, |u_i - v_i|$ is non-negative, so sum of non-negative real numbers is also non-negative</li>\n",
+    "    <li>Since for every $i \\leq n, |u_i - u_i|=0$, $d(u,u)=0$</li>\n",
+    "    <li>Since square of difference is symmetric ($|u_i - v_i| = |v_i - u_i|$), this will also be symmetric</li>\n",
+    "</ul>\n",
+    "</div>"
    ]
   },
   {
@@ -175,6 +305,15 @@
    "metadata": {},
    "source": [
     "#### Prove that inherited metric is a metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "If there were some $u, v$ in inherited metric that violated properties of metric, that the metric from which it was inhereted would not satisfy properties of metrics \n",
+    "</div>"
    ]
   },
   {
@@ -243,11 +382,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div class=\"solution\">\n",
+    "<ul>\n",
+    "<li>$\\lim_{x \\to c}f(x)\\pm g(x)=\\lim_{x \\to c}f(x)\\pm\\lim_{x \\to c}g(x)=f(c)\\pm g(c)$</li>\n",
+    "<li>$\\lim_{x \\to c}f(x)\\cdot g(x)=\\lim_{x \\to c}f(x)\\cdot\\lim_{x \\to c}g(x)=f(c)\\cdot g(c)$</li>\n",
+    "<li>$\\lim_{x \\to c}\\frac{f(x)}{g(x)}=\\frac{\\lim_{x \\to c}f(x)}{\\lim_{x \\to c}g(x)}=\\frac{f(c)}{g(c)}$</li>\n",
+    "<li>$\\lim_{x \\to c}f(g(x))=f(\\lim_{x \\to c}g(x))=f(g(c))$</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
@@ -266,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
