--- a/homework/linear_algebra-2-homework.ipynb
+++ b/homework/linear_algebra-2-homework.ipynb
@@ -13,26 +13,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".solution {\n",
+       "    border: 2px solid #00b8d7;\n",
+       "    border-radius: 5px;\n",
+       "    padding: 5px 5px 5px 20px;\n",
+       "    position: relative;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       ".solution::before {\n",
+       "    content: \"\";\n",
+       "    position: absolute;\n",
+       "    left: 0;\n",
+       "    top: 0;\n",
+       "    transform: translate(-50%);\n",
+       "    border-radius: 100%;\n",
+       "    height: 100%;\n",
+       "    width: 26px;\n",
+       "    background: #00b8d7;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "## Basic setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create anaconda environment\n",
-    "<br>\n",
-    "```bash\n",
-    "conda create -n ml python=3.7.4 jupyter\n",
-    "```\n",
-    "Install fastai library\n",
-    "<br>\n",
-    "```bash\n",
-    "conda install -c pytorch -c fastai fastai\n",
-    "```"
+    "%%html\n",
+    "<style>\n",
+    ".solution {\n",
+    "    border: 2px solid #00b8d7;\n",
+    "    border-radius: 5px;\n",
+    "    padding: 5px 5px 5px 20px;\n",
+    "    position: relative;\n",
+    "    overflow: hidden;\n",
+    "}\n",
+    ".solution::before {\n",
+    "    content: \"\";\n",
+    "    position: absolute;\n",
+    "    left: 0;\n",
+    "    top: 0;\n",
+    "    transform: translate(-50%);\n",
+    "    border-radius: 100%;\n",
+    "    height: 100%;\n",
+    "    width: 26px;\n",
+    "    background: #00b8d7;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
@@ -55,7 +93,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<div class=\"solution\">\n",
+    "We can use the following two properties of linear functions:\n",
+    "<ul>\n",
+    "    <li>$f(u + w) = f(u) + f(w)$</li>\n",
+    "    <li>$f(\\alpha u) = \\alpha f(u)$</li>\n",
+    "</ul>\n",
+    "$f(a_1v_1 + a_2v_2 + \\dots + a_mv_m) = f(a_1v_1)+ f(a_2v_2 + \\dots + a_mv_m) = f(a_1v_1)+ f(a_2v_2) + f(a_3v_3 + \\dots + a_mv_m) = f(a_1v_1)+ f(a_2v_2) + \\dots + f(a_mv_m) = a_1f(v_1) + a_2f(v_2) + \\dots + a_mf(v_m)$\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
@@ -74,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
