--- a/homework/probability-homework.ipynb
+++ b/homework/probability-homework.ipynb
@@ -13,26 +13,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".solution {\n",
+       "    border: 2px solid #00b8d7;\n",
+       "    border-radius: 5px;\n",
+       "    padding: 5px 5px 5px 20px;\n",
+       "    position: relative;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       ".solution::before {\n",
+       "    content: \"\";\n",
+       "    position: absolute;\n",
+       "    left: 0;\n",
+       "    top: 0;\n",
+       "    transform: translate(-50%);\n",
+       "    border-radius: 100%;\n",
+       "    height: 100%;\n",
+       "    width: 26px;\n",
+       "    background: #00b8d7;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "## Basic setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create anaconda environment\n",
-    "<br>\n",
-    "```bash\n",
-    "conda create -n ml python=3.7.4 jupyter\n",
-    "```\n",
-    "Install fastai library\n",
-    "<br>\n",
-    "```bash\n",
-    "conda install -c pytorch -c fastai fastai\n",
-    "```"
+    "%%html\n",
+    "<style>\n",
+    ".solution {\n",
+    "    border: 2px solid #00b8d7;\n",
+    "    border-radius: 5px;\n",
+    "    padding: 5px 5px 5px 20px;\n",
+    "    position: relative;\n",
+    "    overflow: hidden;\n",
+    "}\n",
+    ".solution::before {\n",
+    "    content: \"\";\n",
+    "    position: absolute;\n",
+    "    left: 0;\n",
+    "    top: 0;\n",
+    "    transform: translate(-50%);\n",
+    "    border-radius: 100%;\n",
+    "    height: 100%;\n",
+    "    width: 26px;\n",
+    "    background: #00b8d7;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
@@ -54,17 +92,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mesure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Prove the following mesure properties:\n",
-    "- if $A \\subset B$ then $\\mu(A) \\le \\mu(B)$\n",
-    "<br>\n",
-    "Proof: $(B - A) \\cup (A \\cap B) = (B - A) \\cup A = B$ and $(B - A) \\cap (A \\cap B) = \\emptyset$ so $\\mu((B - A) \\cup (A \\cap B)) = \\mu(B - A) + \\mu(A \\cap B) = \\mu(B - A) + \\mu(A) = \\mu(B)$ so $\\mu(A) \\le \\mu(B)$"
+    "<div class=\"solution\">\n",
+    "let $f$ and $g$ be measurable functions. $f:(X, \\mathcal{F}_X) \\to (Y, \\mathcal{F}_Y)$\n",
+    "and $g:(Z, \\mathcal{F}_Z) \\to (X, \\mathcal{F}_X)$<br />\n",
+    "Then composition will be $f(g): (Z, \\mathcal{F}_Z) \\to (Y, \\mathcal{F}_Y)$ thus it will be measurable too\n",
+    "</div>"
    ]
   },
   {
@@ -88,6 +120,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "$P(A \\cup B) = \\frac{|A \\cup B |}{|Q|} = \\frac{|A| + |B| - |A \\cap B|}{|Q|} = \\frac{|A|}{|Q|} + \\frac{|B|}{|Q|} + \\frac{|A \\cap B|}{|Q|} = P(A) + P(B) - P(A \\cap B)$\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Random variable"
    ]
   },
@@ -103,6 +144,15 @@
     "<br>\n",
     "Denoted by $\\sigma^2$\n",
     "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "$\\sigma^2 = \\operatorname{Var}(X)=  \\operatorname{E}[(X - \\operatorname{E}[X])^2] = \\operatorname{E}[X^2 - 2X\\operatorname{E}[X] + \\operatorname{E}[X]^2] = \\operatorname{E}[X^2] - 2\\operatorname{E}[X]^2 + \\operatorname{E}[X]^2= \\operatorname{E}[X^2] - \\operatorname{E}[X]^2$\n",
+    "</div>"
    ]
   }
  ],
@@ -122,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
