--- a/linear_algebra-2.ipynb
+++ b/linear_algebra-2.ipynb
@@ -13,108 +13,95 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".solution {\n",
+       "    border: 2px solid #00b8d7;\n",
+       "    border-radius: 5px;\n",
+       "    padding: 5px 5px 5px 20px;\n",
+       "    position: relative;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       ".solution::before {\n",
+       "    content: \"\";\n",
+       "    position: absolute;\n",
+       "    left: 0;\n",
+       "    top: 0;\n",
+       "    transform: translate(-50%);\n",
+       "    border-radius: 100%;\n",
+       "    height: 100%;\n",
+       "    width: 26px;\n",
+       "    background: #00b8d7;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "## Basic setup"
+    "%%html\n",
+    "<style>\n",
+    ".solution {\n",
+    "    border: 2px solid #00b8d7;\n",
+    "    border-radius: 5px;\n",
+    "    padding: 5px 5px 5px 20px;\n",
+    "    position: relative;\n",
+    "    overflow: hidden;\n",
+    "}\n",
+    ".solution::before {\n",
+    "    content: \"\";\n",
+    "    position: absolute;\n",
+    "    left: 0;\n",
+    "    top: 0;\n",
+    "    transform: translate(-50%);\n",
+    "    border-radius: 100%;\n",
+    "    height: 100%;\n",
+    "    width: 26px;\n",
+    "    background: #00b8d7;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Special types of matrices"
+    "# Linear spaces"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vector space "
+    "#### Prove that:\n",
+    "For every linear function $f:V \\to U$ between vector spaces $V$ and $U$ on the real numbers, every sequence of vectors $v_1, v_2, \\dots v_m \\in V$ and every scalars $a_1, a_2, \\dots, a_m \\in \\mathbb{R}$:\n",
+    "<br>\n",
+    "$$f(a_1v_1 + a_2v_2 + \\dots + a_mv_m) = a_1f(v_1) + a_2f(v_2) + \\dots + a_mf(v_m)$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear combination"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Linear maps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Eigenvectors and Eigenvalues"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualisation of Eigenvalues and Eigenvectors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Eigenvalues and Eigenvectors example"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Non-Eigenvalues and Eigenvectors example"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vector (Matrix) norm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Determinant as a scaling factor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SVD"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Matrix Decompositions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PCA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Additional Materials"
+    "<div class=\"solution\">\n",
+    "We can use the following two properties of linear functions:\n",
+    "<ul>\n",
+    "    <li>$f(u + w) = f(u) + f(w)$</li>\n",
+    "    <li>$f(\\alpha u) = \\alpha f(u)$</li>\n",
+    "</ul>\n",
+    "$f(a_1v_1 + a_2v_2 + \\dots + a_mv_m) = f(a_1v_1)+ f(a_2v_2 + \\dots + a_mv_m) = f(a_1v_1)+ f(a_2v_2) + f(a_3v_3 + \\dots + a_mv_m) = f(a_1v_1)+ f(a_2v_2) + \\dots + f(a_mv_m) = a_1f(v_1) + a_2f(v_2) + \\dots + a_mf(v_m)$\n",
+    "</div>"
    ]
   }
  ],
